# r8ge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/Shaders/: EntityDefault.glsl  Skybox.glsl
include/r8ge/: r8ge.h  video.h
r8ge/: CMakeLists.txt
r8ge/src/: r8gepch.cpp  r8gepch.h
r8ge/src/core/: Ar8ge.cpp  Ar8ge.h  Core.cpp  Core.h  EntryPoint.cpp  EntryPoint.h  Input.cpp  Input.h  InputStator.cpp  InputStator.h  Logger.cpp  Logger.h  PhysicsManager.cpp  PhysicsManager.h  PlatformDetection.h  TimeStep.cpp  TimeStep.h  Utils.cpp  Utils.h
r8ge/src/core/events/: Dispatcher.h  EngineEvents.cpp  EngineEvents.h  Event.cpp  Event.h  EventPayload.h  EventQueue.h  KeyEvents.h  MouseEvents.cpp  MouseEvents.h  Strokes.h  WindowEvents.h
r8ge/src/core/fileio/: FileIO.cpp  FileReader.cpp
r8ge/src/core/instance/: GameInstance.cpp  GameInstance.h  Instance.cpp  Instance.h
r8ge/src/core/instance/layers/: LayerSwitcher.cpp  LayerSwitcher.h  Layers.cpp  Layers.h
r8ge/src/core/platform/: EntryPoint.cpp
r8ge/src/video/: EntrytPoint.cpp  Video.cpp  Video.h
r8ge/src/video/guiService/: GUIService.h
r8ge/src/video/guiService/linux-impl/imgui/: ImGUI.cpp  ImGUI.h
r8ge/src/video/renderer/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SkyBox.cpp  SkyBox.h
r8ge/src/video/renderingService/buffers/: Buffer.cpp  VertexBufferLayout.cpp
r8ge/src/video/renderingService/openGL/: GLConvertor.cpp  GLFrameBuffer.cpp  GLFrameBuffer.h  GLLighting.cpp  GLLighting.h  GLService.cpp  GLService.h  GLSkyBox.cpp  GLSkyBox.h  GLTexture.cpp  GLTexture.h
r8ge/src/video/renderingService/programManager/: Program.cpp  Program.h  ShaderLibrary.cpp  ShaderLibrary.h
r8ge/src/video/renderingService/textures/: Texture2D.cpp  Texture2D.h
r8ge/src/video/types/: Color.h  Lights.h  Materials.h  Primitives.cpp  Primitives.h  SceneHelper.h  Texture.cpp  Texture.h
r8ge/src/video/windowingService/: WindowingService.cpp  WindowingService.h
r8ge/src/video/windowingService/linux-impl/glfw/: Convertor.h  GLFW.cpp  GLFW.h
testbed/: CMakeLists.txt  Plain.cpp
