set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)
cmake_minimum_required(VERSION 3.24)

project(r8ge_project LANGUAGES C CXX)

if(MSVC)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

# Variables
set(INSTALL_DIR ${CMAKE_SOURCE_DIR}/install/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${INSTALL_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/slib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${INSTALL_DIR}")

add_subdirectory(r8ge)

# Executables
add_subdirectory(testbed)

# Installation
install(TARGETS testbed r8ge
        RUNTIME DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
        LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        ARCHIVE DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
)
